loading tabs from json

--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -10,7 +10,7 @@
 <body class="original">
 <h1>No current task</h1>
 <div class="tabwidget">
-  <ul class="tabs">
+  <ul id = "tabs" class="tabs">
     <li><a href="#snapshots">Snapshots</a></li>
     <li><a href="#tab1">WorkContext 1</a></li>
     <li><a href="#tab2">WorkContext 2</a></li>
