JSON model hooks

--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -72,7 +72,7 @@
           <dd>
             <table class="snapcontainer" width="100%">
               <tr id="template-trArchive">
-                <td>{{text}}</td>
+                <td class="archived_task" contenteditable="true">{{text}}</td>
                 <td class="ops"><button class="resume">Resume</button></td>
               </tr>
             </table>
