resuming but incomplete

--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -79,7 +79,7 @@
             <table class="snapcontainer" width="100%">
               <tr id="template-trArchive">
                 <td class="archived_task" contenteditable="true">{{text}}</td>
-                <td class="ops"><button class="resume">Resume</button></td>
+                <td class="ops"><button class="resumebutton">Resume</button></td>
               </tr>
             </table>
           </dd>
