--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -11,10 +11,10 @@
 <h1>No current task</h1>
 <div class="tabwidget">
   <ul id="tabs" class="tabs">
-    <li><a href="#snapshots">Snapshots</a></li>
+    <!-- <li id="tabtab_snapshots" class="tabtab"><a href="#snapshots">Snapshots</a></li> -->
   </ul>
   <div id="tabcontainer" class="tabcontainer">
-    <div id="snapshots" class="tab_content">
+    <div id="template-divSnapshots" class="template_tab_content">
 <!--      <h2>Previous Snapshots</h2> -->
     <button class="take">Take Snapshot</button>
       <dl>
@@ -37,7 +37,7 @@
         </dl>
     </div>
 
-    <div id="template-divTab" class="tab_content">
+    <div id="template-divTab" class="template_tab_content">
       <table width="100%">
         <tr>
           <td width="100%">
