numeric keys not liked by storage.sync

--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -8,7 +8,7 @@
   <script src="scripts/window.js"></script>
 </head>
 <body class="original">
-<h1>No current task</h1>
+<h1 id="status">No current task</h1>
 <div class="tabwidget">
   <ul id="tabs" class="tabs">
     <!-- <li id="tabtab_snapshots" class="tabtab"><a href="#snapshots">Snapshots</a></li> -->
