--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -16,8 +16,8 @@
   <div id="tabcontainer" class="tabcontainer">
     <div id="template-divSnapshots" class="template_tab_content">
 <!--      <h2>Previous Snapshots</h2> -->
-      <button class="reset-button">Clear Data (!)</button>
       <button class="snapshot-button">Take Snapshot</button>
+      <button class="settings-button">Settings</button>
     </div>
 
     <div id="template-divTab" class="template_tab_content">
