titles, and no stray enter when Ctrl+adding;

--- a/foreman-task-tracker/settings.html
+++ b/foreman-task-tracker/settings.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles/window.css">
   <script type="text/javascript" src="scripts/jquery.min.js"></script>
   <script src="scripts/settings.js"></script>
+  <title>Settings</title>
 </head>
 <body class="original">
 <h1 id="status">Settings</h1>
