--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles/simpletabs.css">
   <script type="text/javascript" src="scripts/jquery.min.js"></script>
   <script src="scripts/window.js"></script>
+  <title>Foreman</title>
 </head>
 <body class="original">
 <h1 id="status">No current task</h1>
