--- a/foreman-task-tracker/settings.html
+++ b/foreman-task-tracker/settings.html
@@ -11,5 +11,9 @@
 <h1 id="status">Settings</h1>
 <button id="reset-button">Reset Data (!)</button>
 <button id="empty-button">Empty Data (!)</button>
+<button id="dump-button">Dump JSON</button>
+<div>
+<textarea style="width:400px;height:300px;" id="dump"></textarea>
+</div>
 </body>
 </html>
