--- a/foreman-task-tracker/window.html
+++ b/foreman-task-tracker/window.html
@@ -40,9 +40,11 @@
           <tr id="template-trActive">
             <td class="active_task" contenteditable="true">{{text}}</td>
             <td class="ops">
-              <!-- <button class="editbutton">Edit</button> -->
-              <button class="archive-button T-I" title="Archive"></button>
-              <button class="delete-button T-I" title="Delete"></button></td>
+              <table><tr><td>
+                <button class="archive-button T-I" title="Archive"></button>
+              </td><td>
+                <button class="delete-button T-I" title="Delete"></button></td>
+              </td></tr></table>
           </tr>
           </table>
         </dd>
