Snapshot tasks button

--- a/foreman-task-tracker/settings.html
+++ b/foreman-task-tracker/settings.html
@@ -12,6 +12,9 @@
 <button id="reset-button">Reset Data (!)</button>
 <button id="empty-button">Empty Data (!)</button>
 <button id="dump-button">Dump JSON</button>
+<br />
+<button id="load-regex-button">Load Regex</button>
+<button id="load-regex-button">Save Regex</button>
 <div>
 <textarea style="width:400px;height:300px;" id="dump"></textarea>
 </div>
