basic regex support

--- a/foreman-task-tracker/settings.html
+++ b/foreman-task-tracker/settings.html
@@ -16,7 +16,7 @@
 <button id="load-regex-button">Load Regex</button>
 <button id="load-regex-button">Save Regex</button>
 <div>
-<textarea style="width:400px;height:300px;" id="dump"></textarea>
+<textarea style="width:98%;height:300px;" id="dump"></textarea>
 </div>
 </body>
 </html>
