Default search changed to bing
I prefer the bing search results.
Hence the change

--- a/browser/browser.html
+++ b/browser/browser.html
@@ -14,13 +14,13 @@
 
       <form id="location-form">
         <div id="center-column">
-          <input id="location" type="text" value="http://www.google.com/">
+          <input id="location" type="text" value="http://www.bing.com/">
         </div>
         <input type="submit" value="Go">
       </form>
 
     </div>
-    <webview src="http://www.google.com/" width="640" height="480"></webview>
+    <webview src="http://www.bing.com/" width="640" height="480"></webview>
 
     <div id="sad-webview">
       <div id="sad-webview-icon">&#9762;</div>
