Update the systemInfo sample to use the new and renamed System APIs.

--- a/system/index.html
+++ b/system/index.html
@@ -1,18 +1,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title> System Information </title>
-<script src="systemInfo.js"></script>
+<script src="system.js"></script>
 </head>
 <body>
 <h2><b>CPU Information</b></h2>
 <div id="cpu-info">
    <i> Loading ...</i>
 </div>
-<div id="cpu-cores">
-   <i> <br>Loading ...</i>
-</div>
 <h2><b>Memory Information</b></h2>
 <div id="memory-info">
+  <i>Loading...</i>
+</div>
+<h2><b>Display Information</b></h2>
+<div id="display-info">
   <i>Loading...</i>
 </div>
 <h2><b>Storage Information</b></h2>
