#187 fixed url for qunit js and css

--- a/calculator/tests/calculator_test.html
+++ b/calculator/tests/calculator_test.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Calculator Chrome App</title>
     <script type="text/javascript" src="../jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
     <script type="text/javascript" src="../view.js"></script>
     <script type="text/javascript" src="../model.js"></script>
     <script type="text/javascript" src="../controller.js"></script>
     <script type="text/javascript" src="calculator_test.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/git/qunit.css">
+    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css">
   </head>
 
   <body>
