Hacky convert of calculator sample app to use Tavern.
.. because I wanted something to play with in Tavern :p

This deletes calculator's copy of jquery and adds a tavspec.yaml that
pulls it in from Tavern. It "works", but:
 - Calculator isn't tested with jquery 1.10 (only 1.6) so it throws some
weird cruft into the UI
 - Had to add to the .gitignore: cache and pubspec.lock that shouldn't be
there (eventually)
 - Had to hardcode jquery version spec in the html - obvs will break if
the package version updates

Otherwise: \o/

R=pajamallama@google.com

Committed: https://github.com/tapted/chrome-app-samples/commit/d5db60c

Committed: https://github.com/tapted/chrome-app-samples/commit/a3607de

Review URL: https://codereview.appspot.com/51080043

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Calculator</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script src="jquery/jquery.min.js"></script>
+		<script src="packages/jquery/jquery.js"></script>
 		<script src="controller.js"></script>
 		<script src="model.js"></script>
 		<script src="view.js"></script>
