--- a/calculator/test/calculator_test.html
+++ b/calculator/test/calculator_test.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Calculator Chrome App</title>
-    <script type="text/javascript" src="../jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="packages/jquery/jquery.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
     <script type="text/javascript" src="../view.js"></script>
     <script type="text/javascript" src="../model.js"></script>
