Window State Sample: Added frame color option for new window.
Allows the use of the new frameOptions: color API, which can be used to
either ask for a native-themed window or a colored title bar of the
user's choice.

--- a/window-state/window.html
+++ b/window-state/window.html
@@ -62,6 +62,11 @@
       <button id="newWindowFullscreen">Fullscreen</button>
       <button id="newWindowMaximized">Maximized</button>
       <button id="newWindowMinimized">Minimized</button>
+      <br>
+      Color:
+      <label><input type="radio" name="newWindowColorEnabled" value="native" checked/>Native-themed</label>
+      <label><input type="radio" name="newWindowColorEnabled" value="colored" id="newWindowColorEnabledTrue" />
+        <input type="color" id="newWindowColor" value="#ffffff" /></label>
     </p>
 
     <p>Current window state:
