Added window close button

--- a/window-state/window.html
+++ b/window-state/window.html
@@ -21,7 +21,8 @@
           <button id="fullscreen">Fullscreen</button>
           <button id="maximize">Maximize</button>
           <button id="minimize">Minimize</button>
-          <button id="restore">Restore</button><br>
+          <button id="restore">Restore</button>
+          <button id="close">Close</button><br>
           <button id="hide">Hide, then Show</button>
           <button id="showInactive">Hide, then Show Inactive</button>
           <button id="drawAttention">Draw Attention</button>
