--- a/samples/hello-world/index.html
+++ b/samples/hello-world/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <title>Prince</title>
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
