Added deregistration to gcm-notifications.

--- a/samples/gcm-notifications/register.html
+++ b/samples/gcm-notifications/register.html
@@ -9,6 +9,7 @@
 
 Sender ID:<input id="senderId" type="TEXT" size="20"><br/>
 <button id="register">Register</button>
+<button id="deregister">Deregister</button>
 <br/><br/>
 
 <div id="status" style="background-color:#e5e5e5;padding:5px">
