--- a/examples/bookmarks/popup.html
+++ b/examples/bookmarks/popup.html
@@ -1,7 +1,11 @@
 <html>
 <head>
-  <script src="third-party/jquery-1.10.2.min.js"></script>
-  <script src="third-party/jquery-ui-1.10.2.min.js"></script>
+  <link rel="stylesheet" href="third-party/jquery-ui.css">
+  <link rel="stylesheet" href="third-party/jquery-ui.structure.css">
+  <link rel="stylesheet" href="third-party/jquery-ui.theme.css">
+  <link rel="stylesheet" href="popup.css">
+  <script src="third-party/jquery-1.12.4.js"></script>
+  <script src="third-party/jquery-ui-1.12.1.js"></script>
 </head>
 <body style="width: 400px">
   <div>Search Bookmarks: <input id="search"></div>
@@ -9,6 +13,7 @@
   <div id="editdialog"></div>
   <div id="deletedialog"></div>
   <div id="adddialog"></div>
+  <div id="test-frame"></div>
   <script src="popup.js"></script>
 </body>
 </html>
