--- a/examples/water_alarm_notification/popup.html
+++ b/examples/water_alarm_notification/popup.html
@@ -1,6 +1,7 @@
 <!-- Copyright 2017 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file. -->
+<!DOCTYPE html>
 <html>
   <head>
     <title>Water Popup</title>
@@ -33,8 +34,8 @@ found in the LICENSE file. -->
   <body>
       <img src='./stay_hydrated.png' id='hydrateImage'>
       <!-- An Alarm delay of less than the minimum 1 minute will fire
-      in approximately 1 minute incriments if released -->
-      <button id="sampleSecond" value="0.1">Sample Second</button>
+      in approximately 1 minute increments if released -->
+      <button id="sampleMinute" value="1">Sample minute</button>
       <button id="min15" value="15">15 Minutes</button>
       <button id="min30" value="30">30 Minutes</button>
       <button id="cancelAlarm">Cancel Alarm</button>
