Remove link to CSP docs that redirects to apps doc

--- a/examples/water_alarm_notification/popup.html
+++ b/examples/water_alarm_notification/popup.html
@@ -25,10 +25,7 @@ found in the LICENSE file. -->
       }
     </style>
     <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
+      - JavaScript and HTML must be in separate files
      -->
   </head>
   <body>
