--- a/cookbook/offscreen-clipboard-write/offscreen.html
+++ b/cookbook/offscreen-clipboard-write/offscreen.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<textarea id="text" type="text"></textarea>
+<textarea id="text"></textarea>
 <script src="offscreen.js""></script>
