Add third sidepanel sample

--- a/examples/side-panel-1/sidepanel.html
+++ b/examples/side-panel-1/sidepanel.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Sidepanel Extension</title>
+  <title>My Sidepanel</title>
 </head>
 <body>
-  <h1>My sidepanel</h1>
-  <p>Enter your notes</p>
-  <input type="text" id="input">
-  <button id="save-button">Save</button>
-  <script src="sidepanel.js"></script>
-</body>
+  <h1>All sites sidepanel extension</h1>
+  <p>This side panel is enabled on all sites</p>
+  </body>
 </html>
