Tweak description Add icons

--- a/examples/side-panel-1/sidepanel.html
+++ b/examples/side-panel-1/sidepanel.html
@@ -6,5 +6,6 @@
 <body>
   <h1>All sites sidepanel extension</h1>
   <p>This side panel is enabled on all sites</p>
+  <input type="text"></input>
   </body>
 </html>
