Fix all prettier and eslint errors

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -3,11 +3,11 @@
  * source code is governed by a BSD-style license that can be found in the
  * LICENSE file.
 -->
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Printers</title>
-    <link href="printers.css" rel="stylesheet" type="text/css">
+    <link href="printers.css" rel="stylesheet" type="text/css" />
     <script src="printers.js"></script>
   </head>
 
