--- a/functional-samples/sample.optional_permissions/newtab.html
+++ b/functional-samples/sample.optional_permissions/newtab.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>New Tab - Optional Permissions</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id="todo_div" class="center colorFun">
@@ -12,7 +12,7 @@
     <div id="display_top"></div>
     <form class="center">
       <input id="todo_value" placeholder="My focus today is..." />
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" />
     </form>
     <footer></footer>
     <script src="newtab.js"></script>
