--- a/functional-samples/sample.water_alarm_notification/popup.html
+++ b/functional-samples/sample.water_alarm_notification/popup.html
@@ -21,7 +21,7 @@ found in the LICENSE file. -->
       }
 
       button:hover {
-        outline: #80DEEA dotted thick;
+        outline: #80deea dotted thick;
       }
     </style>
     <!--
@@ -29,13 +29,13 @@ found in the LICENSE file. -->
      -->
   </head>
   <body>
-      <img src='./stay_hydrated.png' id='hydrateImage'>
-      <!-- An Alarm delay of less than the minimum 1 minute will fire
+    <img src="./stay_hydrated.png" id="hydrateImage" />
+    <!-- An Alarm delay of less than the minimum 1 minute will fire
       in approximately 1 minute increments if released -->
-      <button id="sampleMinute" value="1">Sample minute</button>
-      <button id="min15" value="15">15 Minutes</button>
-      <button id="min30" value="30">30 Minutes</button>
-      <button id="cancelAlarm">Cancel Alarm</button>
-   <script src="popup.js"></script>
+    <button id="sampleMinute" value="1">Sample minute</button>
+    <button id="min15" value="15">15 Minutes</button>
+    <button id="min30" value="30">30 Minutes</button>
+    <button id="cancelAlarm">Cancel Alarm</button>
+    <script src="popup.js"></script>
   </body>
 </html>
