--- a/examples/side-panel-3/sidepanels/welcome-sp.html
+++ b/examples/side-panel-3/sidepanels/welcome-sp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Sidepanel 3</title>
+  <title>Welcome to this side panel</title>
 </head>
 <body>
   <h1>Welcome!</h1>
