--- a/examples/side-panel-2/sidepanel.html
+++ b/examples/side-panel-2/sidepanel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Sidepanel 2</title>
+  <title>My Google side panel extension</title>
 </head>
 <body>
-  <h1>My Google dot com sidepanel</h1>
+  <h1>My google.com sidepanel</h1>
   <p>This side panel will display on www.google.com</p>
   </body>
 </html>
