add section for set/get  badge text color

--- a/api-samples/action/demo/index.html
+++ b/api-samples/action/demo/index.html
@@ -135,6 +135,44 @@
           </button>
         </div>
       </section>
+      <!-- Badge Text Color !-->
+      <section>
+        <h2>Badge Text Color</h2>
+        <p>
+          The
+          <a
+            href="https://developer.chrome.com/docs/extensions/reference/action/#method-setBadgeTextColor"
+            ><code>action.setBadgeTextColor</code></a
+          >
+          method allows you to change the color of the badge text.
+        </p>
+
+        <div class="spaced">
+          <button id="set-badge-txt-color-button">
+            Randomize badge text color
+          </button>
+        </div>
+
+        <p>
+          The
+          <a
+            href="https://developer.chrome.com/docs/extensions/reference/action/#method-getBadgeTextColor"
+            ><code>action.getBadgeTextColor</code></a
+          >
+          method allows you to read the current color of the badge text.
+        </p>
+
+        <div class="flex">
+          <label class="full-width">
+            Current badge text color
+            <input type="text" id="current-badge-txt-color" disabled />
+          </label>
+          <button id="reset-badge-txt-color-button">
+            reset badge text color
+          </button>
+        </div>
+      </section>
+
 
       <!-- badge - icon -->
 
