Show printer status in popup.

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -13,6 +13,7 @@
 
   <body>
     <h2>Printers:</h2>
+    <div id="jobStatus"></div>
     <div id="printers">
       <table id="printersTable">
         <thead>
