--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -13,7 +13,10 @@
 
   <body>
     <h2>Printers:</h2>
-    <div id="jobStatus"></div>
+    <div id="statusDiv">
+      <p id="jobStatus">JobId: <div id="jobIdDiv"></div></p>
+      <button id="cancelBtn">Cancel Printing</button>
+    </div>
     <div id="printers">
       <table id="printersTable">
         <thead>
