--- a/api-samples/action/demo/index.html
+++ b/api-samples/action/demo/index.html
@@ -131,7 +131,7 @@
             <input type="text" id="current-badge-bg-color" disabled />
           </label>
           <button id="reset-badge-background-color-button">
-            reset badge color
+            Reset badge color
           </button>
         </div>
       </section>
@@ -168,7 +168,7 @@
             <input type="text" id="current-badge-txt-color" disabled />
           </label>
           <button id="reset-badge-txt-color-button">
-            reset badge text color
+            Reset badge text color
           </button>
         </div>
       </section>
