adding print job table along with cancel button

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -31,5 +31,18 @@
         </thead>
       </table>
     </div>
+    <h2>Print Job:</h2>
+    <div id="printJob">
+      <table id="printJobTable">
+        <thread>
+          <tr>
+            <th>Job Id</th>
+            <th>Status</th>
+            <th>Cancel</th>
+          </tr>
+        </thread>
+        <tbody id="printJobTbody"></tbody>
+      </table>
+    </div>
   </body>
 </html>
