Add storage module reference from settings page.

--- a/functional-samples/sample.co2meter/settings.html
+++ b/functional-samples/sample.co2meter/settings.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>CO2 meter settings</title>
-<script src="settings_script.js"></script>
+<script type="module" src="settings_script.js"></script>
 </head>
 <body>
 </body>
