Add third-party/idb-keyval, use to set/get interval.

--- a/functional-samples/sample.co2meter/settings.html
+++ b/functional-samples/sample.co2meter/settings.html
@@ -18,7 +18,7 @@
     </div>
     <div>
         <button type="button" id="setInterval">Set CO2 reading interval (in seconds)</button>
-        <input type="number" id="interval" name="interval" value="10">
+        <input type="number" id="interval" name="interval">
     </div>
 </body>
 
