Simplify settings and storage.

--- a/functional-samples/sample.co2meter/settings.html
+++ b/functional-samples/sample.co2meter/settings.html
@@ -7,18 +7,18 @@
 
 <body>
     <div>
-        <button type="button" id="grantPermission">Grant CO2 meter permission</button>
+        <button type="button" id="grantPermissionButton">Grant CO2 meter permission</button>
     </div>
     <div>
-        <button type="button" id="setTemperatureUnit">Set temperature unit</button>
-        <input type="radio" id="celsius" name="celsius">
-        <label for="celsius">Celsius</label>
-        <input type="radio" id="fahrenheit" name="fahrenheit">
-        <label for="fahrenheit">Fahrenheit</label>
+        Set Temperature Unit to: 
+        <input type="radio" id="celsiusInput" name="metric">
+        <label for="celsiusInput">Celsius</label>
+        <input type="radio" id="fahrenheitInput" name="metric">
+        <label for="fahrenheitInput">Fahrenheit</label>
     </div>
     <div>
-        <button type="button" id="setInterval">Set CO2 reading interval (in seconds)</button>
-        <input type="number" id="interval" name="interval">
+        Sensor reading interval (in seconds):
+        <input type="number" id="intervalInput">
     </div>
 </body>
 
