Rename *_script.js files to only *.js.

--- a/functional-samples/sample.co2meter/settings.html
+++ b/functional-samples/sample.co2meter/settings.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>CO2 meter extension settings</title>
-    <script type="module" src="settings_script.js"></script>
+    <script type="module" src="settings.js"></script>
 </head>
 
 <body>
