--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -1,5 +1,13 @@
 <html>
+<script src="./third-party/chartjs/dist/chart.umd.js"></script>
+<script src="./third-party/moment/min/moment.min.js"></script>
+<script src="./third-party/chartjs-adapter-moment/dist/chartjs-adapter-moment.min.js"></script>
 <script src="popup.js"></script>
+
 <body>
+    <div>
+        <canvas id="chart"></canvas>
+    </div>
 </body>
+
 </html>
