background page boardcasting reading updated

--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -2,7 +2,7 @@
 <script src="./third-party/chartjs/dist/chart.umd.js"></script>
 <script src="./third-party/moment/min/moment.min.js"></script>
 <script src="./third-party/chartjs-adapter-moment/dist/chartjs-adapter-moment.min.js"></script>
-<script src="popup.js"></script>
+<script type="module" src="popup.js"></script>
 
 <body>
     <div>
