--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -1,13 +1,12 @@
 <html>
-<script src="./third-party/chartjs/dist/chart.umd.js"></script>
-<script src="./third-party/moment/min/moment.min.js"></script>
-<script src="./third-party/chartjs-adapter-moment/dist/chartjs-adapter-moment.min.js"></script>
 <script type="module" src="popup.js"></script>
-
+<style>
+    iframe {
+        border: none;
+    }
+</style>
 <body>
-    <div>
-        <canvas id="chart"></canvas>
-    </div>
+    <iframe src="chart-iframe.html">
 </body>
 
 </html>
