Continued: chart out of popup into chart.html for iframing

--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -6,7 +6,8 @@
     }
 </style>
 <body>
-    <iframe src="chart-iframe.html">
+    <iframe src="chart-iframe.html"></iframe>
+    <button type="button" id="mainPageButton">Large Chart and Settings</button>
 </body>
 
 </html>
