--- a/functional-samples/sample.co2meter/main-page.html
+++ b/functional-samples/sample.co2meter/main-page.html
@@ -1,16 +1,21 @@
 <html>
-
 <head>
-    <title>CO2 meter extension settings</title>
-    <script type="module" src="settings.js"></script>
+    <title>CO2 Meter</title>
+    <script type="module" src="main-page.js"></script>
+    <style>
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
-
 <body>
     <div>
         <button type="button" id="grantPermissionButton">Grant CO2 meter permission</button>
     </div>
     <div>
-        Set Temperature Unit to: 
+        Set Temperature Unit to:
         <input type="radio" id="celsiusInput" name="metric">
         <label for="celsiusInput">Celsius</label>
         <input type="radio" id="fahrenheitInput" name="metric">
@@ -20,6 +25,6 @@
         Sensor reading interval (in seconds):
         <input type="number" id="intervalInput">
     </div>
+    <iframe src="chart-iframe.html"></iframe>
 </body>
-
 </html>
