increase popup window and iframe size

--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -1,8 +1,14 @@
 <html>
 <script type="module" src="popup.js"></script>
 <style>
+    body {
+        width: 700px;
+        height: 500px;
+    }
     iframe {
         border: none;
+        width: 600px;
+        height: 400px;
     }
 </style>
 <body>
