Show dialog on the chart when device is disconnected

--- a/functional-samples/sample.co2meter/chart-iframe.html
+++ b/functional-samples/sample.co2meter/chart-iframe.html
@@ -9,3 +9,8 @@
 </body>
 
 </html>
+
+<dialog id="device-disconnected">
+    <p>Device is not detected, please make sure the CO2 meter is connected and the permission is granted!</p>
+    <p>Permission can be granted in the settings page.</p>
+</dialog>
