Close dialog button

--- a/functional-samples/sample.co2meter/chart-iframe.html
+++ b/functional-samples/sample.co2meter/chart-iframe.html
@@ -10,7 +10,8 @@
 
 </html>
 
-<dialog id="device-disconnected">
+<dialog id="noDeviceDialog">
     <p>Device is not detected, please make sure the CO2 meter is connected and the permission is granted!</p>
     <p>Permission can be granted in the settings page.</p>
+    <button id="closeDialogButton">Close</button>
 </dialog>
