Add a warning about the print job table.

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -13,6 +13,7 @@
 
   <body>
     <h2>Print Job:</h2>
+    <p>On some systems, the print job may leave the queue too quickly to be visible in this list.</p>
     <div id="printJob">
       <table id="printJobTable">
         <thread>
