--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -12,7 +12,26 @@
   </head>
 
   <body>
+    <h2>Print Job:</h2>
+    <p>On some systems, the print job may leave the queue too quickly to be visible in this list.</p>
+    <div id="printJob">
+      <table id="printJobTable">
+        <thread>
+          <tr>
+            <th>Cancel</th>
+            <th>Job Id</th>
+            <th>Status</th>
+          </tr>
+        </thread>
+        <tbody id="printJobTbody"></tbody>
+      </table>
+    </div>
+
     <h2>Printers:</h2>
+    <div id="statusDiv">
+      <p id="jobStatus">JobId: <div id="jobIdDiv"></div></p>
+      <button id="cancelBtn">Cancel Printing</button>
+    </div>
     <div id="printers">
       <table id="printersTable">
         <thead>
