--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -1,24 +1,25 @@
 <html>
-<script type="module" src="popup.js"></script>
-<style>
+  <script type="module" src="popup.js"></script>
+  <style>
     body {
-        width: 700px;
-        height: 400px;
-        display: flex;
-        flex-direction: column;
+      width: 700px;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
     }
 
     iframe {
-        border: none;
-        flex: auto;
+      border: none;
+      flex: auto;
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <div>
-        <button type="button" id="mainPageButton">Large Chart and Settings</button>
+      <button type="button" id="mainPageButton">
+        Large Chart and Settings
+      </button>
     </div>
     <iframe src="chart-iframe.html"></iframe>
-</body>
-
+  </body>
 </html>
