--- a/functional-samples/sample.co2meter/main-page.html
+++ b/functional-samples/sample.co2meter/main-page.html
@@ -1,38 +1,43 @@
 <html>
-<head>
+  <head>
     <title>CO2 Meter</title>
     <script type="module" src="main-page.js"></script>
     <style>
-        body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-           
-        iframe {
-            border: none;
-            flex: auto;
-        }
+      body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+      }
+
+      iframe {
+        border: none;
+        flex: auto;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <button type="button" id="grantPermissionButton">Grant CO2 meter permission</button>
-        <div>
-            Set Temperature Unit to:
-            <input type="radio" id="celsiusInput" name="metric">
-            <label for="celsiusInput">Celsius</label>
-            <input type="radio" id="fahrenheitInput" name="metric">
-            <label for="fahrenheitInput">Fahrenheit</label>
-        </div>
-        <div>
-            Sensor reading interval (in seconds):
-            <input type="number" id="intervalInput">
-        </div>
-        <button type="button" id="updateChartWithExampleDataButton">Add Example Data to Chart</button> if you do not have a device and want to see a chart.
+      <button type="button" id="grantPermissionButton">
+        Grant CO2 meter permission
+      </button>
+      <div>
+        Set Temperature Unit to:
+        <input type="radio" id="celsiusInput" name="metric" />
+        <label for="celsiusInput">Celsius</label>
+        <input type="radio" id="fahrenheitInput" name="metric" />
+        <label for="fahrenheitInput">Fahrenheit</label>
+      </div>
+      <div>
+        Sensor reading interval (in seconds):
+        <input type="number" id="intervalInput" />
+      </div>
+      <button type="button" id="updateChartWithExampleDataButton">
+        Add Example Data to Chart
+      </button>
+      if you do not have a device and want to see a chart.
     </div>
     <iframe src="chart-iframe.html"></iframe>
-</body>
+  </body>
 </html>
