--- a/functional-samples/cookbook.sidepanel-multiple/sidepanels/main-sp.html
+++ b/functional-samples/cookbook.sidepanel-multiple/sidepanels/main-sp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Sidepanel 3</title>
+    <title>My Sidepanel extension</title>
   </head>
   <body>
     <h1>This is the main side panel</h1>
