Implemented dialog box localization

--- a/examples/dialog-element/index.html
+++ b/examples/dialog-element/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Hello World</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <script src="dialog.js"></script>
-</head>
-<body>
-	<!-- The dialog element can be enabled in Chrome 31 and higher using a setting in chrome://flags.
+  </head>
+  <body>
+    <!-- The dialog element can be enabled in Chrome 31 and higher using a setting in chrome://flags.
 		Look for the "Enable experimental Web Platform features" flag and make sure it is enabled -->
-	<dialog id="dialog1">
-		<h1>Dialog Title</h1>
-		<div>
-			<p>This is the dialog content</p>
-			<button id="close">Close</button>
-		</div>
-	</dialog>
-	<h1>Dialog Element Example</h1>
+    <dialog id="dialog1">
+      <h1 id="title"></h1>
+      <div>
+        <p id="content"></p>
+        <button id="close"></button>
+      </div>
+    </dialog>
+    <h1>Dialog Element Example</h1>
 
-	<p>Demonstrates how to use the &lt;dialog&gt; element in a Chrome App to implement in-app dialogs</p>
-	<button id="show">Open Modal Dialog</button>    
-	<p id="result"></p>
-</body>
+    <p>
+      Demonstrates how to use the &lt;dialog&gt; element in a Chrome App to
+      implement in-app dialogs. The Dialog element's content will be localized
+      to either English or French, depending on the localization setting in the
+      manifest.
+    </p>
+    <button id="show">Open Modal Dialog</button>
+    <p id="result"></p>
+  </body>
 </html>
