refactor to keep connection open

--- a/functional-samples/sample.co2meter/main-page.html
+++ b/functional-samples/sample.co2meter/main-page.html
@@ -30,7 +30,7 @@
         <label for="fahrenheitInput">Fahrenheit</label>
       </div>
       <div>
-        Sensor reading interval (in seconds):
+        Chart refresh interval (in seconds):
         <input type="number" id="intervalInput" />
       </div>
       <button type="button" id="updateChartWithExampleDataButton">
