changing folder case

--- a/api-samples/sandbox2/sandbox/mainpage.html
+++ b/api-samples/sandbox2/sandbox/mainpage.html
@@ -13,14 +13,13 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
   -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="mainpage.js"></script>
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet" />
   </head>
   <body>
-
     <div id="buttons">
       <button id="sendMessage">Click me</button>
       <button id="reset">Reset counter</button>
@@ -28,7 +27,6 @@ limitations under the License.
 
     <div id="result"></div>
 
-    <iframe id="theFrame" src="sandbox.html" style="display: none;"></iframe>
-
+    <iframe id="theFrame" src="sandbox.html" style="display: none"></iframe>
   </body>
 </html>
