--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -48,7 +48,7 @@ limitations under the License.
         name;
 
       // precompile all templates in this page
-      for (var i = 0; i < templatesElements.length; i++) {
+      for (i = 0; i < templatesElements.length; i++) {
         source = templatesElements[i].innerHTML;
         name = templatesElements[i].id;
         templates[name] = Handlebars.compile(source);
@@ -56,9 +56,9 @@ limitations under the License.
 
       // Set up message event handler:
       window.addEventListener('message', function (event) {
-        var command = event.data.command,
-          template = templates[event.data.templateName],
-          result = 'invalid request';
+        (command = event.data.command),
+          (template = templates[event.data.templateName]),
+          (result = 'invalid request');
 
         // if we don't know the templateName requested, return an error message
         if (!template) {
