--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -40,7 +40,7 @@ limitations under the License.
     </script>
 
     <script>
-      var templatesElements = document.querySelectorAll(
+          templatesElements = document.querySelectorAll(
           "script[type='text/x-handlebars-template']"
         ),
         templates = {},
