--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -24,7 +24,7 @@ limitations under the License.
         <h1>Hello</h1>
         <p>This is a Handlebar template compiled inside a hidden sandboxed
           iframe.</p>
-        <p>The counter parameter from postMessage (outer frame) is:
+        <p>The counter parameter from postMessage() (outer frame) is:
           {{counter}}</p>
       </div>
     </script>
