--- a/functional-samples/sample.co2meter/popup.html
+++ b/functional-samples/sample.co2meter/popup.html
@@ -1,25 +1,14 @@
 <html>
   <script type="module" src="popup.js"></script>
   <style>
-    body {
-      width: 700px;
-      height: 400px;
-      display: flex;
-      flex-direction: column;
-    }
-
     iframe {
       border: none;
-      flex: auto;
     }
   </style>
-
   <body>
     <div>
-      <button type="button" id="mainPageButton">
-        Large Chart and Settings
-      </button>
+      <button type="button" id="mainPageButton">Settings</button>
     </div>
-    <iframe src="chart-iframe.html"></iframe>
+    <iframe src="co2-state-iframe.html"></iframe>
   </body>
 </html>
