--- a/functional-samples/sample.co2meter/main-page.html
+++ b/functional-samples/sample.co2meter/main-page.html
@@ -3,17 +3,8 @@
     <title>CO2 Meter</title>
     <script type="module" src="main-page.js"></script>
     <style>
-      body {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-      }
-
       iframe {
         border: none;
-        flex: auto;
       }
     </style>
   </head>
@@ -22,22 +13,7 @@
       <button type="button" id="grantPermissionButton">
         Grant CO2 meter permission
       </button>
-      <div>
-        Set Temperature Unit to:
-        <input type="radio" id="celsiusInput" name="metric" />
-        <label for="celsiusInput">Celsius</label>
-        <input type="radio" id="fahrenheitInput" name="metric" />
-        <label for="fahrenheitInput">Fahrenheit</label>
-      </div>
-      <div>
-        Chart refresh interval (in seconds):
-        <input type="number" id="intervalInput" />
-      </div>
-      <button type="button" id="updateChartWithExampleDataButton">
-        Add Example Data to Chart
-      </button>
-      if you do not have a device and want to see a chart.
     </div>
-    <iframe src="chart-iframe.html"></iframe>
+    <iframe src="co2-state-iframe.html"></iframe>
   </body>
 </html>
