--- a/api-samples/tabCapture/receiver.html
+++ b/api-samples/tabCapture/receiver.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>popup</title>
+    <title>receiver</title>
+    <script src="./receiver.js"></script>
   </head>
 
   <body>
-    <button id="capture-button">Capture</button>
-    <button id="streamid-button">GetMediaStreamId</button>
     <p id="echo-msg"></p>
-    <video id="player" width="600px"></video>
-    <script src="./popup.js"></script>
+    <video id="player" width="100%"></video>
   </body>
 </html>
